added quiz question array

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <button class="next-button">Next</button>
   </section>
-  <script src="./script.js"></script>
+  <script type="module" src="./script.js"></script>
 </body>
 
 </html>
