quiz can be restarted after finishing and displays result

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
       </ul>
     </div>
     <button class="next-button jsNextButton">Next</button>
+    <button class="play-again hidden jsPlayAgain">Play Again</button>
     <p class="question-result jsQuestionResult"></p>
   </section>
   <script type="module" src="./script.js"></script>
